--- a/page2.html
+++ b/page2.html
@@ -65,6 +65,12 @@
       box-shadow: inset -2px -2px 4px rgba(255, 255, 255, 0.5);
     }
 
+    .chocolate-chip:nth-child(1) { width: 30px; height: 30px; top: 10%; left: 25%; }
+    .chocolate-chip:nth-child(2) { width: 22px; height: 22px; top: 50%; left: 60%; }
+    .chocolate-chip:nth-child(3) { width: 28px; height: 28px; top: 75%; left: 45%; }
+    .chocolate-chip:nth-child(4) { width: 20px; height: 20px; top: 60%; left: 15%; }
+    .chocolate-chip:nth-child(5) { width: 24px; height: 24px; top: 15%; left: 70%; }
+
     .dim-background {
       position: absolute;
       top: 0;
@@ -122,35 +128,39 @@
   </style>
 </head>
 <body>
+
+  <div class="dim-background" id="dimBackground"></div>
+
   <div class="counter-box">
     <span id="score">0</span> cookies
   </div>
 
   <div class="game-container">
     <div class="click-circle" onclick="incrementScore()">
-      <div class="chocolate-chip" style="width: 20px; height: 20px; top: 50px; left: 50px;"></div>
-      <div class="chocolate-chip" style="width: 25px; height: 25px; top: 120px; left: 180px;"></div>
-      <div class="chocolate-chip" style="width: 15px; height: 15px; top: 200px; left: 100px;"></div>
-      <div class="chocolate-chip" style="width: 18px; height: 18px; top: 150px; left: 50px;"></div>
-      <div class="chocolate-chip" style="width: 22px; height: 22px; top: 100px; left: 150px;"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
+      <div class="chocolate-chip"></div>
     </div>
   </div>
 
   <div class="gui" id="storeGUI">
     <h2>Store</h2>
+    <p>Buy upgrades and items here!</p>
     <div class="upgrade-line">
       <div>
-        <p>+1 cookie per click</p>
+        <p>Upgrade clicks:</p>
+        <p>plus one cookie per click</p>
       </div>
-      <button class="footer-button" onclick="buyUpgrade()">10 🍪</button>
+      <button class="upgrade-button" id="shopUpgradeButton" onclick="buyUpgrade()">10 🍪</button>
     </div>
   </div>
 
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
-    <p>The code will cost you 10000 cookies.</p>
-    <button onclick="specialAccess()">Get Special Code</button>
-    <button onclick="openLockedPage()">Open Locked Page</button>
+    <p>Special upgrades and bonuses will be displayed here!</p>
+    <button onclick="specialAccess()">Special Access</button>
     <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
   </div>
 
@@ -175,57 +185,87 @@
   <script>
     let score = 0;
     let clickBonus = 1;
-    let specialCode = null;
+
+    async function openDatabase() {
+      return new Promise((resolve, reject) => {
+        const request = indexedDB.open('cookieClickerDB', 1);
+        request.onerror = () => reject(request.error);
+        request.onsuccess = () => resolve(request.result);
+        request.onupgradeneeded = (event) => {
+          const db = event.target.result;
+          if (!db.objectStoreNames.contains('scores')) {
+            db.createObjectStore('scores', { keyPath: 'id' });
+          }
+        };
+      });
+    }
+
+    async function saveScore() {
+      const db = await openDatabase();
+      const tx = db.transaction('scores', 'readwrite');
+      const store = tx.objectStore('scores');
+      await store.put({ id: 'score', value: score });
+      await store.put({ id: 'clickBonus', value: clickBonus });
+      await tx.complete;
+    }
+
+    async function loadScore() {
+      const db = await openDatabase();
+      const tx = db.transaction('scores', 'readonly');
+      const store = tx.objectStore('scores');
+      const storedScore = await store.get('score');
+      const storedClickBonus = await store.get('clickBonus');
+      score = storedScore?.value || 0;
+      clickBonus = storedClickBonus?.value || 1;
+      document.getElementById('score').innerText = score;
+    }
 
     function incrementScore() {
       score += clickBonus;
       document.getElementById('score').innerText = score;
+      saveScore();
     }
 
-    function buyUpgrade() {
+    function toggleGUI(guiID) {
+      const guis = document.querySelectorAll('.gui');
+      guis.forEach(gui => {
+        gui.style.display = gui.id === guiID ? (gui.style.display === 'none' ? 'block' : 'none') : 'none';
+      });
+    }
+
+    async function resetGame() {
+      score = 0;
+      clickBonus = 1;
+      document.getElementById('score').innerText = score;
+      await saveScore();
+      alert('Game has been reset!');
+    }
+
+    async function buyUpgrade() {
       if (score >= 10) {
         score -= 10;
         clickBonus++;
         document.getElementById('score').innerText = score;
+        await saveScore();
       } else {
-        alert('Not enough cookies!');
+        alert('Not enough cookies');
       }
     }
 
     function specialAccess() {
       if (score >= 10000) {
         score -= 10000;
-        specialCode = Math.floor(1000000 + Math.random() * 9000000); // Generate a 7-digit code
         document.getElementById('score').innerText = score;
+        saveScore();
+        const specialCode = Math.floor(1000000 + Math.random() * 9000000); // Generate 7-digit code
         document.getElementById('specialCode').innerText = `Your special code: ${specialCode}`;
       } else {
-        alert('You need at least 10000 cookies for the code.');
+        alert('You need at least 10000 cookies for special access');
       }
     }
 
-    function openLockedPage() {
-      if (specialCode) {
-        alert(`Access Granted! Your special code: ${specialCode}`);
-      } else {
-        alert("You need to generate the special code first!");
-      }
-    }
-
-    function toggleGUI(guiID) {
-      const gui = document.getElementById(guiID);
-      const isVisible = gui.style.display === 'block';
-      document.querySelectorAll('.gui').forEach(g => (g.style.display = 'none'));
-      gui.style.display = isVisible ? 'none' : 'block';
-    }
-
-    function resetGame() {
-      score = 0;
-      clickBonus = 1;
-      specialCode = null;
-      document.getElementById('score').innerText = score;
-      document.getElementById('specialCode').innerText = '';
-      alert("Game reset!");
-    }
+    // Load the saved score on page load
+    window.onload = loadScore;
   </script>
 </body>
 </html>
