--- a/page2.html
+++ b/page2.html
@@ -162,6 +162,7 @@
     <p>Special upgrades and bonuses will be displayed here!</p>
     <button onclick="specialAccess()">Special Access</button>
     <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
+    <button onclick="goToOtherPage()">Go to Other Page</button>
   </div>
 
   <div class="gui" id="statsGUI">
@@ -257,14 +258,17 @@
         score -= 10000;
         document.getElementById('score').innerText = score;
         saveScore();
-        const specialCode = Math.floor(1000000 + Math.random() * 9000000); // Generate 7-digit code
+        const specialCode = Math.floor(1000000 + Math.random() * 9000000);
         document.getElementById('specialCode').innerText = `Your special code: ${specialCode}`;
       } else {
         alert('You need at least 10000 cookies for special access');
       }
     }
 
-    // Load the saved score on page load
+    function goToOtherPage() {
+      window.location.href = "otherpage.html";
+    }
+
     window.onload = loadScore;
   </script>
 </body>
