--- a/page2.html
+++ b/page2.html
@@ -266,7 +266,7 @@
     }
 
     function goToOtherPage() {
-      window.location.href = "otherpage.html";
+      window.location.href = "page3.html";
     }
 
     window.onload = loadScore;
