--- a/page2.html
+++ b/page2.html
@@ -125,6 +125,11 @@
     .footer-button:hover {
       text-decoration: underline;
     }
+
+    .footer-button:disabled {
+      color: gray;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
@@ -160,9 +165,9 @@
   <div class="gui" id="specialGUI">
     <h2>Special</h2>
     <p>Special upgrades and bonuses will be displayed here!</p>
-    <button onclick="specialAccess()">Special Access</button>
+    <button id="specialAccessButton" onclick="specialAccess()">Special Access</button>
     <p id="specialCode" style="margin-top: 20px; font-weight: bold;"></p>
-    <button onclick="goToOtherPage()">Go to Other Page</button>
+    <button id="goToPage3Button" onclick="goToOtherPage()" disabled>Go to Page 3</button>
   </div>
 
   <div class="gui" id="statsGUI">
@@ -254,12 +259,13 @@
     }
 
     function specialAccess() {
-      if (score >= 10) {
-        score -= 10;
+      if (score >= 10000) {
+        score -= 10000;
         document.getElementById('score').innerText = score;
         saveScore();
         const specialCode = Math.floor(1000000 + Math.random() * 9000000);
         document.getElementById('specialCode').innerText = `Your special code: ${specialCode}`;
+        document.getElementById('goToPage3Button').disabled = false;
       } else {
         alert('You need at least 10000 cookies for special access');
       }
