--- a/page3.html
+++ b/page3.html
@@ -3,73 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Verify Special Code</title>
+  <title>Page 3</title>
   <style>
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: linear-gradient(to bottom, #8e44ad, #2c3e50);
+      background-image: linear-gradient(to bottom, #FF4500, #8B0000);
       color: white;
+      height: 100vh;
+      margin: 0;
       font-family: Arial, sans-serif;
-    }
-
-    input {
-      padding: 10px;
-      font-size: 1em;
-      margin: 10px 0;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1em;
-      cursor: pointer;
-    }
-
-    p {
-      margin-top: 20px;
-      font-weight: bold;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <h1>Enter Special Code</h1>
-  <input type="text" id="codeInput" placeholder="Enter your special code" />
-  <button onclick="verifyCode()">Submit</button>
-  <p id="resultMessage"></p>
-
-  <script>
-    async function openDatabase() {
-      return new Promise((resolve, reject) => {
-        const request = indexedDB.open('cookieClickerDB', 1);
-        request.onerror = () => reject(request.error);
-        request.onsuccess = () => resolve(request.result);
-      });
-    }
-
-    async function loadData(key) {
-      const db = await openDatabase();
-      const tx = db.transaction('scores', 'readonly');
-      const store = tx.objectStore('scores');
-      const data = await store.get(key);
-      return data?.value || null; // Return null if no data found
-    }
-
-    async function verifyCode() {
-      const enteredCode = document.getElementById('codeInput').value;
-      const correctCode = await loadData('specialCode');
-
-      console.log('Entered Code:', enteredCode);
-      console.log('Correct Code:', correctCode);
-
-      if (enteredCode === correctCode) {
-        document.getElementById('resultMessage').innerText = 'Access Granted! Welcome!';
-      } else {
-        document.getElementById('resultMessage').innerText = 'Invalid Code. Try Again.';
-      }
-    }
-  </script>
 </body>
 </html>
