--- a/page3.html
+++ b/page3.html
@@ -12,9 +12,31 @@
       margin: 0;
       font-family: Arial, sans-serif;
       overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    button {
+      background-color: #ffffff;
+      color: #8B0000;
+      font-size: 1.5em;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    button:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
 <body>
+  <button onclick="alert('Button clicked!')">Click Me</button>
 </body>
 </html>
