--- a/page3.html
+++ b/page3.html
@@ -37,6 +37,21 @@
   </style>
 </head>
 <body>
-  <button onclick="alert('Button clicked!')">Click Me</button>
+  <button onclick="sendWhatsAppMessage()">Send WhatsApp Message</button>
+
+  <script>
+    function sendWhatsAppMessage() {
+      const userId = "USER123"; // Replace this with a dynamic ID if needed
+      const googleUsername = "user@gmail.com"; // Replace this with logic to get the user's Google email
+      const phoneNumber = "96179313658"; // WhatsApp number in international format
+      const message = `Hello, this is my ID: ${userId}, and my Google username is: ${googleUsername}`;
+      
+      // Construct the WhatsApp URL
+      const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
+      
+      // Open the WhatsApp chat in a new tab
+      window.open(whatsappURL, "_blank");
+    }
+  </script>
 </body>
 </html>
