--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
+  <title>Sign Up / Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -14,7 +14,7 @@
       height: 100vh;
       margin: 0;
     }
-    .login-container {
+    .form-container {
       background-color: #fff;
       padding: 30px;
       border-radius: 8px;
@@ -44,50 +44,100 @@
       color: red;
       font-size: 0.9em;
     }
+    .info {
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
 
-<div class="login-container">
-  <h2>Login</h2>
+<div class="form-container" id="form-container">
+  <h2 id="form-title">Sign Up</h2>
   <div class="error" id="error-message"></div>
-  <form id="login-form">
+  <form id="auth-form">
     <input type="email" id="email" placeholder="Email" required><br>
     <input type="password" id="password" placeholder="Password" required><br>
-    <button type="button" onclick="login()">Login</button>
+    <button type="button" onclick="submitForm()">Sign Up</button>
   </form>
+  <p id="toggle-text">Already have an account? <a href="#" onclick="toggleForm()">Login here</a></p>
 </div>
 
 <script>
-  const registeredUsers = [
-    { email: "test@example.com", password: "password123" },
-    { email: "user@example.com", password: "securepass" },
-  ];
+  // Switch between Sign Up and Login forms
+  function toggleForm() {
+    const formTitle = document.getElementById('form-title');
+    const toggleText = document.getElementById('toggle-text');
+    const formContainer = document.getElementById('form-container');
+    const form = document.getElementById('auth-form');
+    const button = form.querySelector('button');
 
-  function login() {
+    if (formTitle.innerText === 'Sign Up') {
+      formTitle.innerText = 'Login';
+      button.innerText = 'Login';
+      toggleText.innerHTML = "Don't have an account? <a href='#' onclick='toggleForm()'>Sign up here</a>";
+    } else {
+      formTitle.innerText = 'Sign Up';
+      button.innerText = 'Sign Up';
+      toggleText.innerHTML = "Already have an account? <a href='#' onclick='toggleForm()'>Login here</a>";
+    }
+
+    // Clear previous error message
+    document.getElementById('error-message').textContent = '';
+    // Clear form fields
+    form.reset();
+  }
+
+  // Handle Form Submission (Login / Sign Up)
+  function submitForm() {
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
     const errorMessage = document.getElementById('error-message');
+    const formTitle = document.getElementById('form-title').innerText;
 
-    // Clear any previous error
+    // Clear previous error
     errorMessage.textContent = '';
 
-    // Check if the email exists in registered users
-    const user = registeredUsers.find(user => user.email === email);
+    if (formTitle === 'Sign Up') {
+      // Register the user
+      registerUser(email, password, errorMessage);
+    } else {
+      // Login the user
+      loginUser(email, password, errorMessage);
+    }
+  }
 
-    if (!user) {
-      errorMessage.textContent = 'Email not found!';
+  // Register the user
+  function registerUser(email, password, errorMessage) {
+    if (localStorage.getItem(email)) {
+      errorMessage.textContent = 'This email is already registered!';
       return;
     }
 
-    // Check if the password matches
+    // Save the user data in localStorage
+    localStorage.setItem(email, JSON.stringify({ email: email, password: password }));
+
+    // Show success and redirect
+    alert('Registration successful!');
+    window.location.href = 'page3.html';  // Redirect to another page after sign-up
+  }
+
+  // Login the user
+  function loginUser(email, password, errorMessage) {
+    const user = JSON.parse(localStorage.getItem(email));
+
+    if (!user) {
+      errorMessage.textContent = 'Email not registered!';
+      return;
+    }
+
     if (user.password !== password) {
       errorMessage.textContent = 'Incorrect password!';
       return;
     }
 
-    // If login is successful, redirect to another page
-    window.location.href = 'page3.html'; // Replace with your destination page
+    // Login successful, redirect to another page
+    alert('Login successful!');
+    window.location.href = 'page3.html';  // Redirect to another page after login
   }
 </script>
 
