--- a/page3.html
+++ b/page3.html
@@ -118,7 +118,7 @@
 
     // Show success and redirect
     alert('Registration successful!');
-    window.location.href = 'page3.html';  // Redirect to another page after sign-up
+    window.location.href = 'page3.html';  // Redirect to the page with the button
   }
 
   // Login the user
@@ -135,9 +135,9 @@
       return;
     }
 
-    // Login successful, redirect to another page
+    // Login successful, redirect to the page with the button
     alert('Login successful!');
-    window.location.href = 'page3.html';  // Redirect to another page after login
+    window.location.href = 'page3.html';  // Redirect to the page with the button
   }
 </script>
 
