--- a/page3.html
+++ b/page3.html
@@ -3,129 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login and Registration</title>
-  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script type="text/javascript">
-    emailjs.init("sedX3ssYNonPN78s2");  // Your EmailJS public key
-
-    // Function to send the email when login or registration is successful
-    function sendEmail(userEmail) {
-      const templateParams = {
-        from_name: userEmail,
-        to_email: "123blockd@gmail.com",  // Your email address
-        message: `The user with the email ${userEmail} has logged in or registered.`,
-      };
-
-      emailjs.send('service_a7thouk', 'template_efqsyxp', templateParams)
-        .then(function(response) {
-          console.log('Email sent successfully:', response);
-        }, function(error) {
-          console.log('Error sending email:', error);
-        });
-    }
-
-    // Function to handle login form submission
-    function handleLogin(event) {
-      event.preventDefault();
-      const userEmail = document.getElementById("login-email").value;
-      const userPassword = document.getElementById("login-password").value;
-
-      // Basic validation (you can enhance this with real authentication)
-      if (userEmail && userPassword) {
-        sendEmail(userEmail);
-        alert("Login successful!");  // In real-world apps, redirect user after successful login
-      } else {
-        alert("Please enter both email and password.");
-      }
-    }
-
-    // Function to handle registration form submission
-    function handleRegistration(event) {
-      event.preventDefault();
-      const userEmail = document.getElementById("register-email").value;
-      const userPassword = document.getElementById("register-password").value;
-
-      // Basic validation (you can enhance this with real registration logic)
-      if (userEmail && userPassword) {
-        sendEmail(userEmail);
-        alert("Registration successful!");  // In real-world apps, redirect user after registration
-      } else {
-        alert("Please enter both email and password.");
-      }
-    }
-  </script>
+  <title>Register</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      background-color: #f4f4f4;
     }
-    .form-container {
-      background-color: #fff;
+    .container {
+      background: white;
       padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       width: 300px;
+      text-align: center;
     }
-    input {
+    input[type="email"], input[type="submit"] {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
+      border: 1px solid #ddd;
       border-radius: 5px;
-      border: 1px solid #ccc;
     }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
+    input[type="submit"] {
+      background-color: #007bff;
       color: white;
-      border: none;
-      border-radius: 5px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #45a049;
+    input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+    .error {
+      color: red;
+      font-size: 14px;
+      margin-top: -10px;
     }
   </style>
 </head>
 <body>
-  <!-- Login Form -->
-  <div class="form-container" id="login-form-container">
-    <h2>Login</h2>
-    <form id="login-form" onsubmit="handleLogin(event)">
-      <input type="email" id="login-email" placeholder="Enter your email" required>
-      <input type="password" id="login-password" placeholder="Enter your password" required>
-      <button type="submit">Login</button>
-    </form>
-    <p>Don't have an account? <a href="#" onclick="showRegistrationForm()">Register here</a></p>
-  </div>
-
-  <!-- Registration Form -->
-  <div class="form-container" id="register-form-container" style="display: none;">
+  <div class="container">
     <h2>Register</h2>
-    <form id="register-form" onsubmit="handleRegistration(event)">
-      <input type="email" id="register-email" placeholder="Enter your email" required>
-      <input type="password" id="register-password" placeholder="Enter your password" required>
-      <button type="submit">Register</button>
+    <form id="registerForm">
+      <input type="email" id="email" placeholder="Enter your email" required>
+      <span class="error" id="errorMessage"></span>
+      <input type="submit" value="Register">
     </form>
-    <p>Already have an account? <a href="#" onclick="showLoginForm()">Login here</a></p>
   </div>
 
   <script>
-    // Function to show the registration form and hide the login form
-    function showRegistrationForm() {
-      document.getElementById('login-form-container').style.display = 'none';
-      document.getElementById('register-form-container').style.display = 'block';
+    // Open (or create) the IndexedDB database
+    const dbRequest = indexedDB.open("RegistrationDB", 1);
+
+    let db;
+
+    dbRequest.onupgradeneeded = (event) => {
+      db = event.target.result;
+      if (!db.objectStoreNames.contains("users")) {
+        db.createObjectStore("users", { keyPath: "email" });
+      }
+    };
+
+    dbRequest.onsuccess = (event) => {
+      db = event.target.result;
+    };
+
+    dbRequest.onerror = (event) => {
+      console.error("Error opening database:", event.target.errorCode);
+    };
+
+    // Function to check if email is already registered
+    function isEmailRegistered(email) {
+      return new Promise((resolve, reject) => {
+        const transaction = db.transaction(["users"], "readonly");
+        const store = transaction.objectStore("users");
+        const request = store.get(email);
+
+        request.onsuccess = () => {
+          resolve(request.result !== undefined);
+        };
+
+        request.onerror = () => {
+          reject("Error checking email.");
+        };
+      });
     }
 
-    // Function to show the login form and hide the registration form
-    function showLoginForm() {
-      document.getElementById('login-form-container').style.display = 'block';
-      document.getElementById('register-form-container').style.display = 'none';
+    // Function to add a new email to the database
+    function registerEmail(email) {
+      const transaction = db.transaction(["users"], "readwrite");
+      const store = transaction.objectStore("users");
+      store.add({ email });
     }
+
+    document.getElementById("registerForm").addEventListener("submit", async (event) => {
+      event.preventDefault();
+
+      const emailInput = document.getElementById("email");
+      const errorMessage = document.getElementById("errorMessage");
+      const email = emailInput.value.trim();
+
+      // Email validation regex
+      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+
+      if (!emailRegex.test(email)) {
+        errorMessage.textContent = "Please enter a valid email address.";
+        return;
+      }
+
+      // Check if email is already registered
+      const alreadyRegistered = await isEmailRegistered(email);
+
+      if (alreadyRegistered) {
+        errorMessage.textContent = "This email is already in use.";
+        return;
+      }
+
+      // Add email to IndexedDB
+      registerEmail(email);
+
+      // Clear error message and redirect to page4.html
+      errorMessage.textContent = "";
+      window.location.href = "page4.html";
+    });
   </script>
 </body>
 </html>
