--- a/Index.html
+++ b/Index.html
@@ -127,7 +127,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="download-button-container">
-      <a href="https://www.mediafire.com/file/seol5d5xcsekh6i/Moana_2_1080P_480P.mp4/file" class="download-button">Download</a>
+      <a href="https://www.mediafire.com/file/vgqxusm1d01m5v8/build-1131954-20250502221038.apk/file" class="download-button">Download</a>
     </div>
   </div>
 
